[package]
name = "egui-video"
version = "0.9.0"
edition = "2021"
license = "MIT"
description = "a video library for egui"
repository = "https://github.com/n00kii/egui-video"
readme = "README.md"
authors = ["n00kii"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sdl2/bundled"]
from_bytes = ["dep:tempfile"]
# will compile sdl2 for you if you do not have it
# this may require other dependancies (see https://github.com/Rust-SDL2/rust-sdl2#bundled-feature)
sdl2-bundled = ["sdl2/bundled"]

[dependencies]
egui = "0.31"
atomic = "0.6"
bytemuck = { version = "1", features = ["derive"] }
ffmpeg-the-third = "3"
libc = "0.2"
anyhow = "1"
timer = "0.2"
chrono = "0.4"
tempfile = { version = "3", optional = true }
sdl2 = { version = "0.38" }
ringbuf = "0.4"
parking_lot = "0.12"
itertools = "0.14"
nom = "7"

[dev-dependencies]
rfd = "0.15"
eframe = "0.31"
